# favicon-generator

./: .gitignore  Makefile  README.md  pyproject.toml
favicon_generator/: __init__.py  cli.py  converter.py
