[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "favicon-generator"
version = "0.2.1"
description = "A CLI tool to generate .ico favicon files from images"
readme = "README.md"
authors = [
    {name = "Mike Horrocks", email = "mikeh_74_@outlook.com"}
]
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "Pillow>=10.0.0",
    "click>=8.0.0",
]

[project.scripts]
favigen = "favicon_generator.cli:main"

[project.urls]
Homepage = "https://github.com/mikeh74/favicon-generator"
Repository = "https://github.com/mikeh74/favicon-generator"

[tool.setuptools.packages.find]
where = ["."]
include = ["favicon_generator*"]
